--- a/Ejercicio1.html
+++ b/Ejercicio1.html
@@ -3,11 +3,10 @@
     <title>Practica nuestro primer script</title>
     <script>
       var dias = ['lunes','martes','miercoles','jueves','viernes','sabado','domingo'];
-      alert(dias.join('\n'));
+      alert('Dias de la semana:\n' + dias.join('\n'));
     </script>
   </head>
   <body>
     <p>Ejemplo de nuestro primer script</p>
-
   </body>
 </html>
